--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,10 +1,23 @@
-
-body{
+body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.text-primary{
+.text-primary {
     color: #fd6e0a;
+}
+
+.section-title {
+    font-size: 35px;
+    font-weight: 700px;
+    color: #181818;
+    text-align: center;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 /* nav related styles */
@@ -16,34 +29,34 @@ nav {
     margin: 0px 200px;
 }
 
-nav h3{
+nav h3 {
     color: #181818;
     font-size: 45px;
     font-weight: 800px;
 }
 
-nav ul{
+nav ul {
     display: flex;
     align-items: center;
     /* margin-top: 50px; */
 }
 
-nav ul li{
+nav ul li {
     /* list-style-type: none; */
     margin-right: 50px;
     list-style: none;
-    
+
 }
 
-nav a{
+nav a {
     text-decoration: none;
     color: #454545;
     font-size: 400;
 }
 
-.btn{
+.btn {
 
-    background: #FD6E0A; 
+    background: #FD6E0A;
     border-radius: 5px;
     border: 0;
     font-size: 20px;
@@ -53,18 +66,68 @@ nav a{
 }
 
 /* header related styles */
-.header{
-    background: #FFF8F3;
+.header {
+    background-color: #FFF8F3;
+    background-image: url("/images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
-.banner{
-    padding: 30px 30px 30px 150px;
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
-.banner img{
+.banner-content {
+    max-width: 500px;
+}
+
+.banner img {
     width: 500px;
 }
 
+.banner-greeting {
+    font-size: 45px;
+    color: #454545;
+    margin-bottom: 5px;
+}
 
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+.banner-discription {
+    margin-top: 0px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+
+.banner-btn {
+    margin-right: 30px;
+}
+
+#contact-btn {
+    background-color: #FFF8F3;
+    border-radius: 5px;
+    border: 1px solid #FD6E0A;
+    color: #FD6E0A;
+}
+
+/* main section styles */
+
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 230px;
+
+}
