--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,8 @@ body {
     font-weight: 400;
 }
 
+
+
 /* nav related styles */
 
 nav {
@@ -126,6 +128,10 @@ main {
     margin: 0px auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -145,4 +151,65 @@ main {
     font-size: 20px;
     font-weight: 400;
     margin: 0px;
+}
+
+#what-i-do-description {
+    padding: 30px 150px
+}
+
+.skill-container {
+    display: flex;
+    /* margin-right: 24px; */
+    justify-content: space-between;
+
+    border-width: 267px solid white;
+    gap: 24px;
+}
+
+.skills {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* Resume Section Styles */
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 70px;
+    padding: 20px
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.resume-item-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    flex-direction: column;
+    flex-shrink: 0;
+    width: 510px;
 }
