--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -185,25 +185,33 @@ main section {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .resume-container {
     display: flex;
     gap: 70px;
-    padding: 20px
+    padding: 20px;
+    
 }
 
 .resume-item-title {
     color: #474747;
     font-size: 25px;
     font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 .resume-item-institute {
     color: #757575;
     font-size: 20px;
     font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
+
 
 .resume-item-description {
     color: #757575;
@@ -212,4 +220,12 @@ main section {
     flex-direction: column;
     flex-shrink: 0;
     width: 510px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+
+}
+
+.resume-btn{
+    text-align: center;
+    margin-top: 30px;
 }
