--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -193,7 +193,7 @@ main section {
     display: flex;
     gap: 70px;
     padding: 20px;
-    
+
 }
 
 .resume-item-title {
@@ -225,7 +225,32 @@ main section {
 
 }
 
-.resume-btn{
+.resume-btn {
     text-align: center;
     margin-top: 30px;
+}
+
+footer {
+    display: flex;
+    background: #FFF8F3;
+    justify-content:space-between;
+    align-items: center;
+    padding: 130px 200px;
+    margin: 10px;
+    gap: 115px;
+}
+
+
+
+.section-description {
+    color:#474747;
+    font-size: 16px;
+    font-weight: 400;
+    width: 562px;
+    gap: 115px;
+    text-align: left;
+}
+
+.footer-column{
+    float: inline-start;
 }
