--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -234,9 +234,9 @@ footer {
     display: flex;
     background: #FFF8F3;
     justify-content:space-between;
-    align-items: center;
+    align-items:flex-start;
     padding: 130px 200px;
-    margin: 10px;
+    margin: 100px;
     gap: 115px;
 }
 
@@ -253,4 +253,9 @@ footer {
 
 .footer-column{
     float: inline-start;
+}
+
+.social-links{
+    display: flex;
+    gap: 20px;
 }
